--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                                                     <p class="video__text">Пароль: 090607callR</p>
                                                 </div>
                                             </div>
-                                            <button class="video__button">Отправить скрин о просмотре</button>
+                                            <button class="video__button" data-buttonid="1">Отправить скрин о просмотре</button>
                                         </div>
                                         <div class="video">
                                             <div class="video__inner">
@@ -550,7 +550,7 @@
                                                     <p class="video__text">Зарегаться самостоятельно</p>
                                                 </div>
                                             </div>
-                                            <button class="video__button">Отправить скрин о просмотре</button>
+                                            <button class="video__button" data-buttonid="2">Отправить скрин о просмотре</button>
                                         </div>
                                         <div class="video">
                                             <div class="video__inner">
@@ -561,7 +561,7 @@
                                                     <p class="video__text">Зарегаться самостоятельно</p>
                                                 </div>
                                             </div>
-                                            <button class="video__button">Отправить скрин о просмотре</button>
+                                            <button class="video__button" data-buttonid="3">Отправить скрин о просмотре</button>
                                         </div>
                                         <div class="video">
                                             <div class="video__inner">
@@ -573,7 +573,7 @@
                                                     <p class="video__text">Пароль: qypfoj-sYtpyn-7kajha</p>
                                                 </div>
                                             </div>
-                                            <button class="video__button">Отправить скрин о просмотре</button>
+                                            <button class="video__button" data-buttonid="4">Отправить скрин о просмотре</button>
                                         </div>
                                         <div class="video">
                                             <div class="video__inner">
@@ -585,7 +585,7 @@
                                                     <p class="video__text">Пароль: qypfoj-sYtpyn-7kajha</p>
                                                 </div> 
                                             </div>
-                                            <button class="video__button">Отправить скрин о просмотре</button>                                      
+                                            <button class="video__button" data-buttonid="5">Отправить скрин о просмотре</button>                                      
                                         </div>                                    
                                     </div>
                                 </div>
@@ -654,7 +654,7 @@
                                                         <p class="task-list__text">Скинь архив с АПИ по офферу «Степлекс» Венгрия (любой ленд топовый)</p>
                                                     </li>
                                                 </ul>
-                                                <button class="button-blue task-button">Отправить скрин</button>
+                                                <button class="button-blue task-button" data-buttonid="6">Отправить скрин</button>
                                             </div>
                                             <div class="task-content" data-task="2">
                                                 <div class="task-head">
@@ -793,22 +793,35 @@
         <div class="popup__inner popup__inner_shot">
             <div class="popup__wrapper drop-area" id="drop-area">
                 <form class="file-form">
-                    <img src="images/shot.png" class="popup__image popup__image_shot" alt="">       
-                    <p class="popup__title popup__title_shot">Вставь скрин о просмотре видео и получении сертификата</p>
-                    <p class="popup__subtitle">Вставить можно при помощи Drag’n’Drop в это окно или с помощью кнопки ниже</p>
-                    <label class="drop-area__button" for="fileElem">Выбрать скриншот</label>
-                    <input type="file" id="fileElem" class="drop-area__file" multiple accept="image/*" onchange="handleFiles(this.files)">
+                    <div class="file-form__comment hide">
+                        <p class="file-form__title">Вставь комментарий и скриншоты о выполнении задачи №1</p>
+                        <textarea cols="30" rows="10" class="file-form__textarea" placeholder="Добавить комментарий"></textarea>
+                        <div class="file-form__buttons">
+                            <button class="button-blue button-blue_file-form add-screans" type="button">Добавить скрины</button>
+                            <button class="button-blue button-blue_file-form no-screans" type="button">Отправить без скринов</button>
+                        </div>
+                    </div>
+                    <div class="file-form__content">
+                        <img src="images/shot.png" class="popup__image popup__image_shot" alt="">       
+                        <p class="popup__title popup__title_shot">Вставь скрин о просмотре видео и получении сертификата</p>
+                        <p class="popup__subtitle">Вставить можно при помощи Drag’n’Drop в это окно или с помощью кнопки ниже</p>
+                        <label class="drop-area__button" for="fileElem">Выбрать скриншот</label>
+                        <input type="file" id="fileElem" class="drop-area__file" multiple accept="image/*" onchange="handleFiles(this.files)">
+                    </div>                    
                 </form>
                 <div id="gallery" class="gallery-files"></div>
-                <div class="gallery-files__btn">
-                    <button class="gallery-files__button">Отправить скрины</button>
-                </div>                
+                <div class="gallery-files__btn gallery-files__btn_video">
+                    <button class="gallery-files__button gallery-files__button-js">Отправить скрины</button>
+                </div>
+                <div class="gallery-files__btn gallery-files__btn_task hide">
+                    <button class="gallery-files__button gallery-files__button_task">Отправить скрины</button>
+                </div>                 
             </div>  
             <div class="popup__close popup__close_shot">Вернуться</div>             
         </div>
     </div>
 
-    <div class="popup popup_task">
+    <!-- <div class="popup popup_task">
         <div class="popup__overlay"></div>
         <div class="popup__inner popup__inner_shot">
             <div class="popup__wrapper popup__wrapper_task drop-area" id="drop-area">
@@ -836,7 +849,7 @@
             </div>  
             <div class="popup__close popup__close_task">Вернуться</div>             
         </div>        
-    </div>
+    </div> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
